updated metadata, readme

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,13 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <title>Car App</title>
+  <title>Car Dealership - Ilker Cakir 🔥</title>
+  <meta name="title" content="Car Dealership - Ilker Cakir 🔥">
+  <meta name="description" content="This app is the best car dealership app you would ever see!">
 </head>
 
 <body>
